Fixing link colors on dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,6 +12,10 @@ html[data-theme="light"] {
 html[data-theme="dark"] {
   --main-background-color: hsl(0, 0%, 10%);
   --main-text-color: hsl(0, 10%, 80%);
+  a:hover {
+    color: #61dafb;
+    text-decoration: underline;
+  }
 }
 
 body {
